--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             </div>
             <div>
                 <p class="Para1">
-                    Improve your front-end
+                    Improve your front-end <br>
                     skills by building projects
                 </p>
             </div>
             <div>
                 <p class="Para2" >
-                    Scan the QR code to visit Frontend
-                    Mentor and take your coding skills to
+                    Scan the QR code to visit Frontend<br>
+                    Mentor and take your coding skills to<br>
                     the next level
                 </p>
             </div>
